<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvindiHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvindiHomeName" />

            <TextView
                android:id="@+id/tvindiHomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNoText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvnameHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvnameHomeName" />

            <TextView
                android:id="@+id/tvnameHomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNoText"  />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvfloors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvfloorsName" />

            <TextView
                android:id="@+id/tvfloorsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNoText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvdeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvdeveloperName" />

            <TextView
                android:id="@+id/tvdeveloperText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNoText"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>